<resources>
    <string name="app_name">玩Android</string>
    
    <string name="home">首页</string>

    <string name="classfy">分类</string>

    <string name="myhome">个人</string>
    <string name="my_collect">我的收藏</string>
    <string name="about_us">关于我们</string>
    <string name="login_now">点击登录</string>
    <string name="exit_login">退出登录</string>

    <string name="user_name">用户名:</string>
    <string name="password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="no_login">暂未登录</string>


    <string name="have_loginout">已注销</string>

    <string name="login_success">登录成功</string>

    <string name="register_success">注册成功</string>
    <string name="please_login">请先登录</string>

    <string name="null_name_pass">用户名和密码不能为空</string>
    <string name="length_short">用户名和密码长度不能小于6位</string>


    <string name="collect_list">收藏列表</string>
    <string name="collection_su">收藏成功</string>
    <string name="un_collection">取消收藏成功</string>





    <string name="home_icon">&#xe9cb;</string>
    <string name="classfy_icon">&#xe9c0;</string>
    <string name="user_icon">&#xe9d1;</string>
    <string name="search_icon">&#xe9c6;</string>
    <string name="collect_nor">&#xe708;</string>
    <string name="collect_se">&#xe707;</string>
    <string name="back_icon">&#xe9d8;</string>


    <string name="cancel">取消</string>
    <string name="search_hint">请输入关键字</string>
    <string name="keyword">热门搜索</string>

    <string name="no_net">您的网络开小差了，请稍后重试！</string>



</resources>
