<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.wanandroid.ui.activity.main.MainActivity">

   <View
       android:id="@+id/view"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:background="@color/color_2395FF"/>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/height_44dp"
       android:background="@color/color_2395FF">
      <com.example.administrator.wanandroid.utils.IconFontTextView
          android:id="@+id/search_icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:textSize="@dimen/textSize_30sp"
          android:textColor="@color/color_white"
          android:text="@string/search_icon"
          android:layout_alignParentRight="true"
          android:layout_marginRight="@dimen/margin_10dp"/>
   </RelativeLayout>
  <android.support.v4.view.ViewPager
      android:id="@+id/viewpage"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:orientation="vertical"
       android:layout_alignParentBottom="true"
       android:background="@color/color_f8f8f8">
      <View
          android:layout_width="match_parent"
          android:layout_height="@dimen/margin_0.5dp"
          android:paddingTop="@dimen/padding_2dp"
          android:background="@color/color_888888"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:weightSum="3">
         <LinearLayout
             android:id="@+id/line_home"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:gravity="center"
             android:clickable="true"
             android:orientation="vertical">
            <com.example.administrator.wanandroid.utils.IconFontTextView
                android:id="@+id/home_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_30sp"
                android:textColor="@color/color_2395FF"
                android:text="@string/home_icon"/>
            <TextView
                android:id="@+id/home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_12sp"
                android:textColor="@color/color_2395FF"
                android:text="@string/home"/>
         </LinearLayout>
         <LinearLayout
             android:id="@+id/line_clasify"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:gravity="center"
             android:clickable="true"
             android:orientation="vertical">
            <com.example.administrator.wanandroid.utils.IconFontTextView
                android:id="@+id/classfy_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_30sp"
                android:textColor="@color/color_2395FF"
                android:text="@string/classfy_icon"/>
            <TextView
                android:id="@+id/classfy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_12sp"
                android:textColor="@color/color_2395FF"
                android:text="@string/classfy"/>
         </LinearLayout>
         <LinearLayout
             android:id="@+id/line_my"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:gravity="center"
             android:clickable="true"
             android:orientation="vertical">
            <com.example.administrator.wanandroid.utils.IconFontTextView
                android:id="@+id/my_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_30sp"
                android:textColor="@color/color_2395FF"
                android:text="@string/user_icon"/>
            <TextView
                android:id="@+id/my_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_12sp"
                android:textColor="@color/color_2395FF"
                android:text="@string/myhome"/>
         </LinearLayout>

      </LinearLayout>
   </LinearLayout>

</LinearLayout>
