<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_2395FF"/>
    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_alignParentRight="true"
        android:padding="@dimen/padding_20dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/search_clear_normal"/>
    <com.example.administrator.wanandroid.utils.CircleImageView
        android:id="@+id/user_icon"
        android:layout_width="@dimen/height_60dp"
        android:layout_height="@dimen/height_60dp"
        android:layout_below="@id/close"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_photo"/>

    <LinearLayout
        android:id="@+id/line_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/user_icon"
        android:layout_margin="@dimen/margin_20dp">

        <TextView
            android:id="@+id/text_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/textSize_14sp"
            android:text="@string/user_name"/>
        <EditText
            android:id="@+id/edit_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_passwoord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line_user_name"
        android:layout_marginTop="@dimen/margin_30dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp">

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/textSize_14sp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_passwoord"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_20dp">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/height_44dp"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/textSize_14sp"
            android:text="@string/register"/>
        <View
            android:layout_width="@dimen/height_5dp"
            android:layout_height="@dimen/height_44dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/height_44dp"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/textSize_14sp"
            android:text="@string/login"/>
    </LinearLayout>

</RelativeLayout>